--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Koalla Holla</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script> -->
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
