--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Koalla Holla</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script> -->
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
-  </head>
+
+       </head>
   <body>
+
     <header>
-      <img src="images/icon.png" class="icon" />
+      <div class="div">
+      <img src="images/icon.png">
       <h1>Koala Holla</h1>
-      <h3>1976 Llama Comma Drive</h2>
-      <h3>Walla Walla, WA</h2>
+      <h3>1976 Llama Comma Drive</h3>
+      <h4>Walla Walla, WA</h4>
+      </div>
     </header>
+ 
     <section id="addKoala">
       <h2>Add Koala</h2>
       <input type="text" id="nameIn" value="" placeholder="Name">
