--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Koalla Holla</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script> -->
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
        </head>
   <body>
@@ -31,6 +33,17 @@
     </section>
     <section>
       <h2>All Koalas</h2>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Order By
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" id ="name" href="#">Name</a></li>
+          <li><a class="dropdown-item" id ="age" href="#">Age</a></li>
+          <li><a class="dropdown-item" id ="gender" href="#">Gender</a></li>
+          <li><a class="dropdown-item" id ="transfer" href="#">Transfer Status</a></li>
+        </ul>
+      </div>
       <table>
         <thead>
           <tr>
